--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,9 @@ jobs:
     name: Release
     needs: [test]
     runs-on: ${{ matrix.os }}
-    matrix:
-      os: [ubuntu-latest, macOS-latest]
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macOS-latest]
     steps:
       - uses: hecrj/setup-rust-action@master
       - uses: actions/checkout@master
