Fix conditionals to not have "$"

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,6 @@ jobs:
       - uses: actions/checkout@master
       - run: cargo install cross
       - run: cross build --target x86_64-unknown-linux-gnu --release
-        if: ${{ matrix.os }} == 'ubuntu-latest'
+        if: runner.os == 'Linux'
       - run: cross build --target x86_64-apple-darwin --release
-        if: ${{ matrix.os }} == 'macOS-latest'
+        if: runner.os == 'macOS'
