--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -47,9 +47,18 @@ jobs:
         run: | # Install cross from master until fix for TTY is released
           git clone https://github.com/rust-embedded/cross
           cargo install --force --path ./cross
-        
+
         # Build the release for the platform on the appropriate runner
-      - run: cross build --target x86_64-unknown-linux-gnu --release
+      - run: mkdir binaries
+      - run: |
+          mkdir x86_64-unknown-linux-gnu
+          cross build --target x86_64-unknown-linux-gnu --release
+          cp target/x86_64-unknown-linux-gnu/release/starship x86_64-unknown-linux-gnu
+          tar -czf x86_64-unknown-linux-gnu
         if: runner.os == 'Linux'
-      - run: cross build --target x86_64-apple-darwin --release
+      - run: |
+          mkdir x86_64-apple-darwin
+          cross build --target x86_64-apple-darwin --release
+          cp target/x86_64-unknown-linux-gnu/release/starship x86_64-apple-darwin
+          tar -czf x86_64-apple-darwin
         if: runner.os == 'macOS'
