--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,69 +11,32 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-  release:
-    name: Release
+  linux-release:
+    name: Linux Release
     needs: [test]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macOS-latest]
+    runs-on: ubuntu-latest
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Dump job context
-        env:
-          JOB_CONTEXT: ${{ toJson(job) }}
-        run: echo "$JOB_CONTEXT"
-      - name: Dump steps context
-        env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
-        run: echo "$STEPS_CONTEXT"
-      - name: Dump runner context
-        env:
-          RUNNER_CONTEXT: ${{ toJson(runner) }}
-        run: echo "$RUNNER_CONTEXT"
-      - name: Dump strategy context
-        env:
-          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-        run: echo "$STRATEGY_CONTEXT"
-      - name: Dump matrix context
-        env:
-          MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo "$MATRIX_CONTEXT"
-
-      - uses: hecrj/setup-rust-action@master
       - uses: actions/checkout@master
-      - name: Install cross
-        run: | # Install cross from master until fix for TTY is released
-          git clone https://github.com/rust-embedded/cross
-          cargo install --force --path ./cross
-
-        # Build the release for the platform on the appropriate runner
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+          arguments: --release --target x86_64-unknown-linux-gnu
+          use-cross: true
       - run: |
-          cross build --target x86_64-unknown-linux-gnu --release
           cp target/x86_64-unknown-linux-gnu/release/starship starship
           tar -czf x86_64-unknown-linux-gnu.tar.gz starship
-        if: runner.os == 'Linux'
-      - name: Release (Linux)
-        uses: Shopify/upload-to-release@master
-        if: runner.os == 'Linux'
-        with: 
-          name: x86_64-unknown-linux-gnu.tar.gz
-          path: x86_64-unknown-linux-gnu.tar.gz
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
+  macos-release:
+    name: macOS Release
+    needs: [test]
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+          arguments: --release --target x86_64-apple-darwin 
+          use-cross: true
       - run: |
-          cross build --target x86_64-apple-darwin --release
           cp target/x86_64-apple-darwin/release/starship starship
           tar -czf x86_64-apple-darwin.tar.gz starship
-        if: runner.os == 'macOS'
-      - name: Release (macOS)
-        uses: Shopify/upload-to-release@master
-        if: runner.os == 'macOS'
-        with: 
-          name: x86_64-apple-darwin.tar.gz
-          path: x86_64-apple-darwin.tar.gz
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
