--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: actions-rs/cargo@v1
+      - uses: actions-rs/cargo@master
         with:
           command: build
           arguments: --release --target x86_64-unknown-linux-gnu
@@ -29,7 +29,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@master
-      - uses: actions-rs/cargo@v1
+      - uses: actions-rs/cargo@master
         with:
           command: build
           arguments: --release --target x86_64-apple-darwin 
