--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - uses: actions-rs/toolchain@master
       - uses: actions-rs/cargo@master
         with:
           command: build
@@ -26,6 +27,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@master
+      - uses: actions-rs/toolchain@master
       - uses: actions-rs/cargo@master
         with:
           command: build
