--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: actions-rs/toolchain@master
+        with:
+          toolchain: stable
       - uses: actions-rs/cargo@master
         with:
           command: build
@@ -28,6 +30,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: actions-rs/toolchain@master
+        with:
+          toolchain: stable
       - uses: actions-rs/cargo@master
         with:
           command: build
