Use fixed version for actions-rs

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - uses: actions-rs/cargo@master
+      - uses: actions-rs/cargo@v1
         with:
           command: build
           arguments: --release --target x86_64-unknown-linux-gnu
@@ -34,7 +34,7 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - uses: actions-rs/cargo@master
+      - uses: actions-rs/cargo@v1
         with:
           command: build
           arguments: --release --target x86_64-apple-darwin 
