--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -141,7 +141,7 @@ jobs:
           toolchain: stable
           override: true
       - run: cargo install --force cargo-publish-all
-      - run: cargo-publish-all --token $CRATES_IO_TOKEN --yes
+      - run: cargo-publish-all --dry-run
 
   github_release:
     if: startsWith(github.ref, 'refs/tags/v')
