ci: Use include correctly

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -149,16 +149,13 @@ jobs:
     needs: [test, docker_test]
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        fail-fast: false
+        os: [ubuntu-latest, macOS-latest]
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             bin: starship
             name: starship-x86_64-unknown-linux-gnu.tar.gz
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-musl
-            bin: starship
-            name: starship-x86_64-unknown-linux-musl.tar.gz
           - os: macOS-latest
             target: x86_64-apple-darwin
             bin: starship
