--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -205,10 +205,11 @@ jobs:
           git-chglog -c .github/chglog/release.yml $(git describe --tags $(git rev-list --tags --max-count=1)) > ${{ github.workflow }}-RELEASE.txt
 
       - name: Create GitHub release
-        uses: softprops/action-gh-release@retry-api
-        with:
-          draft: true
-          files: ${{ matrix.name }}
-          # body_path: ${{ github.workflow }}-RELEASE.txt
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v1
+        # with:
+        #   draft: true
+        #   files: ${{ matrix.name }}
+        #   body_path: ${{ github.workflow }}-RELEASE.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
