--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -207,9 +207,9 @@ jobs:
       - name: Create GitHub release
         if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v1
-        # with:
+        with:
         #   draft: true
-        #   files: ${{ matrix.name }}
-        #   body_path: ${{ github.workflow }}-RELEASE.txt
+          files: ${{ matrix.name }}
+          body_path: ${{ github.workflow }}-RELEASE.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
