--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -203,12 +203,14 @@ jobs:
           export PATH=$PATH:$(go env GOPATH)/bin
           go get -u github.com/git-chglog/git-chglog/cmd/git-chglog
           git-chglog -c .github/chglog/release.yml $(git describe --tags $(git rev-list --tags --max-count=1)) > ${{ github.workflow }}-RELEASE.txt
+          echo ${{ github.workflow }}-RELEASE.txt
 
       - name: Create GitHub release
         uses: softprops/action-gh-release@v1
         with:
         #   draft: true
           # files: ${{ matrix.name }}
-          body_path: ${{ github.workflow }}-RELEASE.txt
+          # body_path: ${{ github.workflow }}-RELEASE.txt
+          body: "Test release body"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
