ci: Rearrange matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -150,19 +150,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, ubuntu-18.04, macOS-latest]
+        target:
+          - x86_64-unknown-linux-gnu
+          - x86_64-unknown-linux-musl
+          - x86_64-apple-darwin
         include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            bin: starship
+          - target: x86_64-unknown-linux-gnu
+            os: ubuntu-latest
             name: starship-x86_64-unknown-linux-gnu.tar.gz
-          - os: ubuntu-18.04
-            target: x86_64-unknown-linux-musl
-            bin: starship
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-latest
             name: starship-x86_64-unknown-linux-musl.tar.gz
-          - os: macOS-latest
-            target: x86_64-apple-darwin
-            bin: starship
+          - target: x86_64-apple-darwin
+            os: macOS-latest
             name: starship-x86_64-apple-darwin.tar.gz
     runs-on: ${{ matrix.os }}
     steps:
@@ -187,13 +187,13 @@ jobs:
 
       - name: Prepare build artifacts
         run: |
-          strip target/${{ matrix.target }}/release/${{ matrix.bin }}
+          strip target/${{ matrix.target }}/release/starship
           cd target/${{ matrix.target }}/release
           if [[ "${{ matrix.os }}" == "windows-latest" ]]
           then
-            7z a ../../../${{ matrix.name }} ${{ matrix.bin }}
+            7z a ../../../${{ matrix.name }} starship
           else
-            tar czvf ../../../${{ matrix.name }} ${{ matrix.bin }}
+            tar czvf ../../../${{ matrix.name }} starship
           fi
           cd -
           
