--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -113,27 +113,22 @@ jobs:
       #   with:
       #     toolchain: stable
       #     override: true
-
       # # Install Node.js at a fixed version
       # - uses: actions/setup-node@master
       #   with:
       #     node-version: "12.0.0"
-
       # # Install Golang at a fixed version
       # - uses: actions/setup-go@master
       #   with:
       #     go-version: "1.12.1"
-
       # # Install Ruby at a fixed version
       # - uses: actions/setup-ruby@master
       #   with:
       #     ruby-version: "2.6.3"
-
       # # Install Python at a fixed version
       # - uses: actions/setup-python@master
       #   with:
       #     python-version: "3.6.9"
-
       # # Run the ignored tests that expect the above setup
       # - name: Run all tests
       #   uses: actions-rs/cargo@v1
@@ -183,24 +178,9 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # Publish all packages to Crates.io
-  cargo_publish:
-    if: startsWith(github.ref, 'refs/tags/v')
-    name: Publish Cargo Packages
-    needs: [test, docker_test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-      - run: cargo install --force cargo-publish-all
-      - run: cargo-publish-all --dry-run
-
   github_release:
     if: startsWith(github.ref, 'refs/tags/v')
-    name: Create GitHub release
+    name: Create GitHub Release
     needs: [test, docker_test]
     strategy:
       fail-fast: false
@@ -209,6 +189,8 @@ jobs:
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
           - x86_64-apple-darwin
+          - x86_64-pc-windows-gnu
+          - x86_64-pc-windows-msvc
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
@@ -219,6 +201,12 @@ jobs:
           - target: x86_64-apple-darwin
             os: macOS-latest
             name: starship-x86_64-apple-darwin.tar.gz
+          - target: x86_64-pc-windows-gnu
+            os: windows-latest
+            name: starship-x86_64-pc-windows-gnu.zip
+          - target: x86_64-pc-windows-msvc
+            os: windows-latest
+            name: starship-x86_64-pc-windows-msvc.zip
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
@@ -242,27 +230,29 @@ jobs:
 
       - name: Prepare build artifacts
         run: |
-          strip target/${{ matrix.target }}/release/starship
-          cd target/${{ matrix.target }}/release
           if [[ "${{ matrix.os }}" == "windows-latest" ]]
           then
-            7z a ../../../${{ matrix.name }} starship
+            strip target/${{ matrix.target }}/release/starship.exe
+            cd target/${{ matrix.target }}/release
+            7z a ../../../${{ matrix.name }} starship.exe
           else
+            strip target/${{ matrix.target }}/release/starship
+            cd target/${{ matrix.target }}/release
             tar czvf ../../../${{ matrix.name }} starship
           fi
           cd -
-          
+
       - name: Generate release notes
         run: |
           # Temporary fix for https://github.com/actions/setup-go/issues/14
           export PATH=$PATH:$(go env GOPATH)/bin
           go get -u github.com/git-chglog/git-chglog/cmd/git-chglog
-          git-chglog -c .github/chglog/release.yml $(git describe --tags $(git rev-list --tags --max-count=1)) > RELEASE.txt
+          git-chglog -c .github/chglog/release.yml $(git describe --tags) > RELEASE.md
 
       - name: Create GitHub release ${{ matrix.target }}
         uses: softprops/action-gh-release@v1
         with:
           files: ${{ matrix.name }}
-          body_path: RELEASE.txt
+          body_path: RELEASE.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
