--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -228,18 +228,20 @@ jobs:
           command: build
           args: --release --target ${{ matrix.target }}
 
-      - name: Prepare build artifacts
+      - name: Prepare build artifacts [Windows]
+        if: contains(matrix.os, 'windows')
         run: |
-          if [[ "${{ matrix.os }}" == "windows-latest" ]]
-          then
-            strip target/${{ matrix.target }}/release/starship.exe
-            cd target/${{ matrix.target }}/release
-            7z a ../../../${{ matrix.name }} starship.exe
-          else
-            strip target/${{ matrix.target }}/release/starship
-            cd target/${{ matrix.target }}/release
-            tar czvf ../../../${{ matrix.name }} starship
-          fi
+          strip target/${{ matrix.target }}/release/starship
+          cd target/${{ matrix.target }}/release
+          tar czvf ../../../${{ matrix.name }} starship 
+          cd -
+
+      - name: Prepare build artifacts [-nix]
+        if: ! contains(matrix.os, 'windows')
+        run: |
+          strip target/${{ matrix.target }}/release/starship
+          cd target/${{ matrix.target }}/release
+          tar czvf ../../../${{ matrix.name }} starship 
           cd -
 
       - name: Generate release notes
