--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -231,9 +231,9 @@ jobs:
       - name: Prepare build artifacts [Windows]
         if: matrix.os == 'windows-latest'
         run: |
-          strip target/${{ matrix.target }}/release/starship
+          strip target/${{ matrix.target }}/release/starship.exe
           cd target/${{ matrix.target }}/release
-          tar czvf ../../../${{ matrix.name }} starship 
+          7z a ../../../${{ matrix.name }} starship.exe
           cd -
 
       - name: Prepare build artifacts [-nix]
