--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -232,17 +232,13 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           strip target/${{ matrix.target }}/release/starship.exe
-          cd target/${{ matrix.target }}/release
-          7z a ../../../${{ matrix.name }} starship.exe
-          cd -
+          7z a ${{ matrix.name }} target/${{ matrix.target }}/release/starship.exe
 
       - name: Prepare build artifacts [-nix]
         if: matrix.os != 'windows-latest'
         run: |
           strip target/${{ matrix.target }}/release/starship
-          cd target/${{ matrix.target }}/release
-          tar czvf ../../../${{ matrix.name }} starship 
-          cd -
+          tar czvf ${{ matrix.name }} target/${{ matrix.target }}/release/starship
 
       - name: Generate release notes
         run: |
