--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -241,6 +241,7 @@ jobs:
           tar czvf ${{ matrix.name }} target/${{ matrix.target }}/release/starship
 
       - name: Generate release notes
+        if: matrix.os == 'ubuntu-latest'
         run: |
           # Temporary fix for https://github.com/actions/setup-go/issues/14
           export PATH=$PATH:$(go env GOPATH)/bin
