Add profile minimal

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -214,6 +214,7 @@ jobs:
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
+          profile: minimal
           toolchain: stable
           override: true
           target: ${{ matrix.target }}
