Add vcredist2017 for windows builds

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -225,7 +225,7 @@ jobs:
 
       - name: Install VC++
         if: matrix.target == 'x86_64-pc-windows-gnu'
-        run: choco install rust-ms
+        run: choco install vcredist2017
 
       - name: Build target
         uses: actions-rs/cargo@v1
