--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -77,83 +77,82 @@ jobs:
           command: check
           args: --all
 
-  # Run tests on Linux, macOS, and Windows
-  # On both Rust stable and Rust nightly
-  test:
-    name: Test Suite
-    needs: [cargo_check]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-        rust: [stable, nightly]
-    steps:
-      # Checkout the branch being tested
-      - uses: actions/checkout@v1
+  # # Run tests on Linux, macOS, and Windows
+  # # On both Rust stable and Rust nightly
+  # test:
+  #   name: Test Suite
+  #   needs: [cargo_check]
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       os: [ubuntu-latest, macOS-latest, windows-latest]
+  #       rust: [stable, nightly]
+  #   steps:
+  #     # Checkout the branch being tested
+  #     - uses: actions/checkout@v1
 
-      # Install all the required dependencies for testing
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+  #     # Install all the required dependencies for testing
+  #     - uses: actions-rs/toolchain@v1
+  #       with:
+  #         profile: minimal
+  #         toolchain: stable
+  #         override: true
 
-      # Install Node.js at a fixed version
-      - uses: actions/setup-node@v1
-        with:
-          node-version: "12.0.0"
+  #     # Install Node.js at a fixed version
+  #     - uses: actions/setup-node@v1
+  #       with:
+  #         node-version: "12.0.0"
 
-      # Install Golang at a fixed version
-      - uses: actions/setup-go@v1
-        with:
-          go-version: "1.12.1"
+  #     # Install Golang at a fixed version
+  #     - uses: actions/setup-go@v1
+  #       with:
+  #         go-version: "1.12.1"
 
-      # Install Ruby at a fixed version
-      - uses: actions/setup-ruby@v1
-        with:
-          ruby-version: "2.6.3"
+  #     # Install Ruby at a fixed version
+  #     - uses: actions/setup-ruby@v1
+  #       with:
+  #         ruby-version: "2.6.3"
 
-      # Install Python at a fixed version
-      - uses: actions/setup-python@v1
-        with:
-          python-version: "3.7.4"
+  #     # Install Python at a fixed version
+  #     - uses: actions/setup-python@v1
+  #       with:
+  #         python-version: "3.7.5"
 
-      # Install dotnet at a fixed version
-      - uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: "2.2.402"
+  #     # Install dotnet at a fixed version
+  #     - uses: actions/setup-dotnet@v1
+  #       with:
+  #         dotnet-version: "2.2.402"
 
-      # Run the ignored tests that expect the above setup
-      - name: Run all tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: -- -Z unstable-options --include-ignored
+  #     # Run the ignored tests that expect the above setup
+  #     - name: Run all tests
+  #       uses: actions-rs/cargo@v1
+  #       with:
+  #         command: test
+  #         args: -- -Z unstable-options --include-ignored
 
-  # Run the tests in the Docker image
-  docker_test:
-    name: Test in Docker
-    needs: [cargo_check]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: Pull the pre-built Docker image
-        run: docker pull starshipcommand/starship-test
-      - name: Fix file permissions
-        run: chmod -R a+w .
-      - name: Build the Docker image
-        run:
-          docker build -f tests/Dockerfile --tag starshipcommand/starship-test --cache-from
-          starshipcommand/starship-test .
-      - name: Run tests in Docker
-        run: docker run --rm -v $(pwd):/src/starship starshipcommand/starship-test
+  # # Run the tests in the Docker image
+  # docker_test:
+  #   name: Test in Docker
+  #   needs: [cargo_check]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@master
+  #     - name: Pull the pre-built Docker image
+  #       run: docker pull starshipcommand/starship-test
+  #     - name: Fix file permissions
+  #       run: chmod -R a+w .
+  #     - name: Build the Docker image
+  #       run:
+  #         docker build -f tests/Dockerfile --tag starshipcommand/starship-test --cache-from
+  #         starshipcommand/starship-test .
+  #     - name: Run tests in Docker
+  #       run: docker run --rm -v $(pwd):/src/starship starshipcommand/starship-test
 
   # Publish starship to Crates.io
   cargo_publish:
     if: startsWith(github.ref, 'refs/tags/v')
     name: Publish Cargo Package
-    needs: [test, docker_test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -167,31 +166,10 @@ jobs:
     env:
       CRATES_IO_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
 
-  # Create a PR to bump the brew formula version
-  brew_bump_formula:
-    if: startsWith(github.ref, 'refs/tags/v')
-    name: Bump Brew Formula
-    needs: [test, docker_test]
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v1
-      - run: |
-          git config --global user.email "bot@starship.rs"
-          git config --global user.name "Starship Bot"
-
-          cd $(brew --repo homebrew/core)
-          git fetch origin
-          sudo git reset --hard origin/master
-          cd -
-      - run: brew bump-formula-pr --url=https://github.com/starship/starship/archive/$(git describe --tags).tar.gz --message="Automated release pull request using continuous integration." --no-browse -v starship --force
-    env:
-      HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN }}
-
   # Create GitHub release with Rust build targets and release notes
   github_release:
     if: startsWith(github.ref, 'refs/tags/v')
     name: Create GitHub Release
-    needs: [test, docker_test]
     strategy:
       fail-fast: false
       matrix:
@@ -199,7 +177,7 @@ jobs:
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
           - x86_64-apple-darwin
-          - x86_64-pc-windows-gnu
+          - x86_64-pc-windows-msvc
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
@@ -210,9 +188,9 @@ jobs:
           - target: x86_64-apple-darwin
             os: macOS-latest
             name: starship-x86_64-apple-darwin.tar.gz
-          - target: x86_64-pc-windows-gnu
+          - target: x86_64-pc-windows-msvc
             os: windows-latest
-            name: starship-x86_64-pc-windows-gnu.zip
+            name: starship-x86_64-pc-windows-msvc.zip
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
@@ -238,14 +216,18 @@ jobs:
       - name: Prepare build artifacts [Windows]
         if: matrix.os == 'windows-latest'
         run: |
-          strip target/${{ matrix.target }}/release/starship.exe
-          7z a ${{ matrix.name }} target/${{ matrix.target }}/release/starship.exe
+          cd target/${{ matrix.target }}/release
+          strip starship.exe
+          7z a ../../../${{ matrix.name }} starship.exe
+          cd -
 
       - name: Prepare build artifacts [-nix]
         if: matrix.os != 'windows-latest'
         run: |
-          strip target/${{ matrix.target }}/release/starship
-          tar czvf ${{ matrix.name }} target/${{ matrix.target }}/release/starship
+          cd target/${{ matrix.target }}/release
+          strip starship
+          tar czvf ../../../${{ matrix.name }} starship
+          cd -
 
       - name: Generate release notes
         if: matrix.os == 'ubuntu-latest'
